IMP-9 fix: adjusted the alignment of the product and title

--- a/src/components/product-cards/product-card-14/styles/card.css
+++ b/src/components/product-cards/product-card-14/styles/card.css
@@ -52,17 +52,22 @@
     border: 1px solid #E3364E;
     letter-spacing: 3px;
     text-transform: uppercase;
+    text-align: center;
+    justify-content: center;
+    margin-right: 40px;
+
 }
 
 .product-title {
    margin-left: 80px;
    margin-top: 20px;
+  
 
 }
 @media screen and (min-width: 430px) and (max-width: 680px){
     .btn-products{
-        font-size: 10px;
-        width: 150px;
+        font-size: 11px;
+        width: 130px;
     }
     .product-title {
         margin-right: 20%;
@@ -71,13 +76,109 @@
    
 } 
 
-@media screen and (min-width: 330px) and (max-width: 429px){
-    .btn-products{
-        font-size: 5px;
-        font-weight: 600;
+@media screen and (min-width: 431px) and (max-width: 765px) {
+    .product-title {
+        margin-left: 3%;
+        margin-top: 5px !important;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
     }
 }
 
+@media screen and (min-width: 330px) and (max-width: 429px){
+    .btn-products{
+        font-size: 9px;
+        font-weight: 600;
+    }
+    .product-title {
+        margin-left: 10px;
+        margin-top: -35px !important;
+     
+     }
+
+}
+@media screen and (max-width: 390px) {
+    .product-title {
+        margin-top: -20px !important;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px)
+{
+    .product-title {
+        margin-left: 8px;
+        margin-top: -85px;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+     }
+}
+@media screen and (min-width: 820px) and (max-width: 1180px) {
+    .product-title {
+         margin-left: 20px;
+        margin-top: -60px;
+    }
+    .pname {
+        margin-top: -30PX !important;
+    }
+    
+    
+}
+@media screen and (min-width: 412px) and (max-width: 914px) {
+    .product-title {
+        margin-top: 20px !important;
+    }
+   
+}
+
+@media screen and (max-width: 1024px)  {
+    .product-title {
+        margin-top: -25px;
+        margin-left: 10px;
+        /* margin-left: -2px; */
+        /* margin-right: 10px; */
+        margin-left: 30px;
+    }
+    
+}
+@media screen and (max-width: 430px) {
+    .pname {
+        margin-top: 10px !important;
+    }
+}
+
+@media screen and (max-width : 1280px) and (min-width: 800px){
+    .product-title {
+        margin-top: 90px;
+    }
+    .pname {
+        margin-top: 40px !important;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .product-title {
+        margin-top: -20px !important;
+    }
+}
+
+@media screen and (min-width: 375px) {
+    .product-title {
+        margin-top: -20px !important;
+    }
+    .pname {
+        margin-top: -20px;
+    }
+}
+@media screen and (max-width: 540px) and (max-width: 720px) {
+        .product-title {
+            margin-right: 36px !important;
+            margin-left: 9px;
+            margin-top: -80px;
+            /* margin-bottom: -80px; */
+        }    
+}
 .btn-products:hover{
     background-color: #E3364E;
     color:white;
